--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<style>
+<meta charset="utf-8">
 * {
 	padding : 0;
 	margin : 0;
@@ -83,37 +84,37 @@ footer {
 	<div id='page'>
 <header>
 		<div id='logo'>
-			¡Ú¼Ò¼ÒÇÑ ¶±ººÀÌ ÀÌ¾ß±â¡Ú
+			â˜…ì†Œì†Œí•œ ë–¡ë³¶ì´ ì´ì•¼ê¸°â˜…
 		</div>
 </header>
-		<div class='clear'></div> <!-- float ¼Ó¼º ÇØÁ¦ -->
+		<div class='clear'></div> <!-- float ì†ì„± í•´ì œ -->
 			<nav>
 					<ul>
-							<li><b>¶±ººÀÌ¶õ?</b></li>
-							<li><b>¶±ººÀÌ °¡°Ô ÀÌ¸§</b></li>
-							<li><b>¶±ººÀÌ Á¾·ù</b></li>
+							<li><b>ë–¡ë³¶ì´ëž€?</b></li>
+							<li><b>ë–¡ë³¶ì´ ê°€ê²Œ ì´ë¦„</b></li>
+							<li><b>ë–¡ë³¶ì´ ì¢…ë¥˜</b></li>
 					</ul>
 			</nav>
-<div class='clear'></div> <!-- float ¼Ó¼º ÇØÁ¦ -->			
+<div class='clear'></div> <!-- float ì†ì„± í•´ì œ -->			
 <section>
 				<img src='./image/1.jpg'><img src='./image/2.jpg'><img src='./image/3.jpg'>
 </section>
 	<aside>
 		<ul>
-					<li>ÀÌ°Ô¹ºÁö</li>
-					<li>±Ã±ÝÇÏÁö?</li>
-					<li>³ªµµ¸ô¶ó..</li>
+					<li>ì´ê²Œë­”ì§€</li>
+					<li>ê¶ê¸ˆí•˜ì§€?</li>
+					<li>ë‚˜ë„ëª°ë¼..</li>
 		</ul>
 	</aside>
 <section class='clear'>
-				<b>"»ç½Ç.. ³ª´Â ¶±ººÀÌ¸¦ ÁÁ¾ÆÇÏ´Â ÆíÀº ¾Æ´ÏÁö¸¸..<br> ÀÌ ¼¼»ó¿¡ »ì°íÀÖ´Â ¸ðµç ¶±ººÀÌ¸¦ ÁÁ¾ÆÇÏ´Â »ç¶÷µéÀ» À§ÇØ¼­ ³ª´Â ÀÌ ÆäÀÌÁö¸¦ ¸¸µé¾î º¸ÀÌ°Ú¾î!"<b>
+				<b>"ì‚¬ì‹¤.. ë‚˜ëŠ” ë–¡ë³¶ì´ë¥¼ ì¢‹ì•„í•˜ëŠ” íŽ¸ì€ ì•„ë‹ˆì§€ë§Œ..<br> ì´ ì„¸ìƒì— ì‚´ê³ ìžˆëŠ” ëª¨ë“  ë–¡ë³¶ì´ë¥¼ ì¢‹ì•„í•˜ëŠ” ì‚¬ëžŒë“¤ì„ ìœ„í•´ì„œ ë‚˜ëŠ” ì´ íŽ˜ì´ì§€ë¥¼ ë§Œë“¤ì–´ ë³´ì´ê² ì–´!"<b>
 </section>
 
 			<div class='clear'></div>
 <footer>
 		<div id='address'>
-			ÁÖÃÖ : ¾îµð¿¡ »ç´Â ÁÖÀÎÀå<br>
-			ÁÖ°ü : ÁÖÀÎÀåÀ» Á¦¿ÜÇÑ ¶±ººÀÌ¸¦ ÁÁ¾ÆÇÏ´Â ¸ðµç »ç¶÷µé
+			ì£¼ìµœ : ì–´ë””ì— ì‚¬ëŠ” ì£¼ì¸ìž¥<br>
+			ì£¼ê´€ : ì£¼ì¸ìž¥ì„ ì œì™¸í•œ ë–¡ë³¶ì´ë¥¼ ì¢‹ì•„í•˜ëŠ” ëª¨ë“  ì‚¬ëžŒë“¤
 		</div>
 		<div id='customer'>
 				
