--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ aside {
 		margin-left : 30px; 
 		margin-top : 10px;
 		border : solid 2px #00ff00;
+		padding-right : 30px;
 }
 aside li {
 		margin-bottom : 20px;
