--- a/Practice.html
+++ b/Practice.html
@@ -9,7 +9,7 @@
 }
 table
 {
-	margin-left : 800px;
+	margin-left : 700px;
 }
 .red
 {
@@ -37,19 +37,26 @@ body {
 표현하자면 나는 거리를 걷다보면 자주 보이고 누구나 간편하게 만들어 먹을 수 있는 <b><span class="blue">국민분식</span></b>이라고 생각이 든다.<br>
 <h2> 그.렇.다.면 </h2>
 도대체 왜 나의 머릿속에서는 떡볶이가 <b><span class="blue">국민분식</span></b>이라는 생각이 들까?<br>
-나는 어느새인가 떡볶이에 빠져서 이런생각이 들게 된걸까? 아니다. 떡볶이라는 음식이 
+나는 어느새인가 떡볶이에 빠져서 이런생각이 들게 된걸까? 
+나는 생각해본다. 
+<h2>그것은 아니다!</h2>
+그냥 우리에게는 떡볶이라는 음식이 너무 친숙하고 쉽게 접할 수 있기 때문이다!
+우리들에게 떡볶이가 친숙하고 쉽게 접할수 있어 다른 분식보다도 제일 먼저 뇌 속에서 분식하면 생각나는게 떡볶이라고 나는 생각한다. 
+여러분의 생각은 어떠한가?
 </div>
 <div class="cen">
 <table border="1">
 <tr>
-<td rowspan="5"><label><input type="radio" name="why" value="분식하면 떡볶이가 생각나서?">분식하면 떡볶이가 생각나서?</label><br>
+<td rowspan="6"><label><input type="radio" name="why" value="분식하면 떡볶이가 생각나서?">분식하면 떡볶이가 생각나서?</label><br>
 <label><input type="radio" name="why" value="개인적으로 떡볶이를 좋아해서?">개인적으로 떡볶이를 좋아해서?</label><br>
 <label><input type="radio" name="why" value="떡볶이가 분식중의 최고라고 생각해서?">떡볶이가 분식중에 최고라고 생각해서?</label><br>
 <label><input type="radio" name="why" value="그냥 분식하면 가장먼저 떠올라서?">그냥 분식하면 가장먼저 떠올라서?</label><br>
-<label><input type="radio" name="why" value="이 홈페이지가 떡볶이 이야기를 해서?">이 홈페이지가 떡볶이 이야기를 해서?</label></td><br>
+<label><input type="radio" name="why" value="이 홈페이지가 떡볶이 이야기를 해서?">이 홈페이지가 떡볶이 이야기를 해서?</label><br>
+<label><input type="radio" name="why" value="나는 아무생각이 없다. 왜냐하면 아무생각이 없기 때문이다.">나는 아무생각이 없다. 왜냐하면 아무생각이 없기 때문이다.</label>
+</td><br>
 </tr>
 <tr>
-<td><input type="submit" value="?"></td>
+<td><input type="submit"></td>
 </tr>
 </table>
 </div>
