--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ footer {
 							<li><b>소소한 이야기</b></li>
 							<div class="dropdownContents">
 							<a href="Practice.html"><li>떡볶이란 무엇인가</li></a>
-							<a href="Practiceo.html"><li>떡볶이 탄생비화</li></a>
+							<a href="Practiceo.html"><li>떡볶이 국민분식화</li></a>
 							<a href="Practicet.html"><li>떡볶이 만드는 법</li></a>
 							</div>
 							</div>
