--- a/Practicet.html
+++ b/Practicet.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="division">
-<h1><section class="red">떡볶이</section> 만드는 법</h1>
+<h1><span class="red">떡볶이</span> 만드는 법</h1>
 </div>
 </body>
 </html>
