--- a/Practice.html
+++ b/Practice.html
@@ -2,57 +2,73 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<style>
-.division
-{
+<style>
+.red {
+	color : red;
+}
+.orange {
+	color : orange;
+}
+body {
+	background-color : oldlace;
+}
+.division {
 	text-align : center;
+}
+section.skew {
+	transform : skew(30deg, 5deg);
+}
+section.skewy {
+	transform : skewY(-5deg);
+}
+section {
+	transition : width 2s, height 2s, transform 2s;
+}
+section:active {
+	transform : rotate(-5deg);
 }
 table
 {
 	margin-left : 700px;
 }
-.red
-{
-	color : red;
-}
-.blue
-{
-	color : blue;
-}
-
-body {
-	background-color : blanchedalmond;
-}
-	</style>
-
-
+</style>
+	<title></title>
 </head>
 <body>
 <div class="division">
-<h1>¿<span class="red">떡볶이</span>란 무엇인가?</h1>
-</div>
-<div class="division">
-<section><img src="./image/4.jpg" width="300" height="200"></section>
-먼저 떡볶이를 사전에 검색을 해보았을때 <b>"가래떡을 적당한 크기로 잘라 여러 가지 채소를 넣고 양념을 하여 볶은 음식. 양념은 간장으로 하기도 하고, 고추장으로 하기도 한다."</b>라고 명시되어있다.<br>.<br>.<br>.<br>.<br>라는 식상한 이야기는 접어두고, <br>여러분은 떡볶이라 하면은 <b>"어떤"</b> 생각이 먼저 드는가?<br> 개인적인 생각을
-표현하자면 나는 거리를 걷다보면 자주 보이고 누구나 간편하게 만들어 먹을 수 있는 <b><span class="blue">국민분식</span></b>이라고 생각이 든다.<br>
-<h2> 그.렇.다.면 </h2>
-도대체 왜 나의 머릿속에서는 떡볶이가 <b><span class="blue">국민분식</span></b>이라는 생각이 들까?<br>
-나는 어느새인가 떡볶이에 빠져서 이런생각이 들게 된걸까? 
-나는 생각해본다. 
-<h2>그것은 아니다!</h2>
-그냥 우리에게는 떡볶이라는 음식이 너무 친숙하고 쉽게 접할 수 있기 때문이다!
-우리들에게 떡볶이가 친숙하고 쉽게 접할수 있어 다른 분식보다도 제일 먼저 뇌 속에서 분식하면 생각나는게 떡볶이라고 나는 생각한다. 
-여러분의 생각은 어떠한가?
-</div>
-<div class="cen">
+<h1>여러분! <span class="red">떡볶이</span> 하면 무엇이겠습니까?!</h1>
+<h1><span class="red">떡볶이</span> 하면 빠질수 없는 튀김! 순대! 오뎅! 면!(당면,라면 등)</h1>
+<h2>하지만 거의 모든 사람들이 가장 잘 어울린다고 입을 모아 말하는것이 바로 <span class="orange">떡튀순</span>이죠!</h2>
+<img src="./image/15.jpg" width="500"><br>
+<section class="skew"><h2>왜 떡튀순이냐구요? 몰라요 누가 그렇게 정했나 봅니다. 그래서 뭐요. 아 몰라 그냥 그런걸로 합시다.</h2>
+<h2>동의하지 못하시겠다고요? 타당한 이유를 대라고요? 잘 모르겠고.. 저는 굽히지않을겁니다.</h2></section>
+<section><img src="./image/16.jpg" width="500"></section><br>
+<section class="skewy"><h3>여러분은 어차피 강제로 동의를 하시게 될겁니다. 왜냐구요?<br>
+제가 그렇게 만들겁니다.</h3></section>
+<span><img src="./image/17.jpg" width="500"></span><br>
+<h2>어... 쓸데없이 시간 낭비를 했군요. 그럼 이어서 말하겠습니다.</h2>
+<p>떡튀순은 진짜 언제먹어도 정말 환상의 조합이라고합니다(진짜인가?). 아 저는 모릅니다. 왜냐구요? 아 몰라 ㄱ..
+</p>
+<img src="./image/18.jpg" width="500">
+<h2>악 아악 죄송합니다 으아악</h2><br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<img src="./image/19.jpg" width="300">
+<p>..아무튼.. 떡볶이랑 같이 먹으면 좋은것들.. 특히 튀김이랑 순대.<br>
+저는 개인적으로 면종류를 좋아해서 라볶이나 떡볶이 국물에 당면넣어서 먹는것도 좋아합니다.<br> 오뎅은 솔직히.. 떡볶이에 들어가있는것도 괜찮지만.. 솔직히 말하자면
+그냥 길거리다니다가 포차 비슷하게 하는 오뎅이 더 좋아서...흐음</p>
+
+<p>어쨌거나 결론은 떡튀순은 진리입니다. 떡튀순 만세!</p>
+<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<img src="./image/20.jpg" width="600">
+
+<h1>여러분은 지금 주인장을 어떻게 하고싶나요?</h1>
 <table border="1">
 <tr>
-<td rowspan="6"><label><input type="radio" name="why" value="분식하면 떡볶이가 생각나서?">분식하면 떡볶이가 생각나서?</label><br>
-<label><input type="radio" name="why" value="개인적으로 떡볶이를 좋아해서?">개인적으로 떡볶이를 좋아해서?</label><br>
-<label><input type="radio" name="why" value="떡볶이가 분식중의 최고라고 생각해서?">떡볶이가 분식중에 최고라고 생각해서?</label><br>
-<label><input type="radio" name="why" value="그냥 분식하면 가장먼저 떠올라서?">그냥 분식하면 가장먼저 떠올라서?</label><br>
-<label><input type="radio" name="why" value="이 홈페이지가 떡볶이 이야기를 해서?">이 홈페이지가 떡볶이 이야기를 해서?</label><br>
-<label><input type="radio" name="why" value="나는 아무생각이 없다. 왜냐하면 아무생각이 없기 때문이다.">나는 아무생각이 없다. 왜냐하면 아무생각이 없기 때문이다.</label>
+<td rowspan="6"><label><input type="radio" name="how" value="패고싶다.">패고싶다.</label><br>
+<label><input type="radio" name="how" value="괴롭히고싶다.">괴롭히고싶다.</label><br>
+<label><input type="radio" name="how" value="귀엽구만.">귀엽구만.</label><br>
+<label><input type="radio" name="how" value="죽인다.">죽인다.</label><br>
+<label><input type="radio" name="how" value="봐줄만하다.">봐줄만하다.</label><br>
+<label><input type="radio" name="how" value="나는 아무생각이 없다. 왜냐하면 아무생각이 없기 때문이다.">나는 아무생각이 없다. 왜냐하면 아무생각이 없기 때문이다.</label>
 </td><br>
 </tr>
 <tr>
@@ -60,6 +76,5 @@ body {
 </tr>
 </table>
 </div>
-
 </body>
 </html>
