--- a/index.html
+++ b/index.html
@@ -112,9 +112,8 @@ footer {
 							<div class="dropdown">
 							<li><b>소소한 이야기</b></li>
 							<div class="dropdownContents">
-							<a href="Practice.html"><li>떡볶이란 무엇인가</li></a>
+							<a href="Practice.html"><li>소소한 잡담</li></a>
 							<a href="Practiceo.html"><li>떡볶이 국민분식화</li></a>
-							<a href="Practicet.html"><li>떡볶이 만드는 법</li></a>
 							</div>
 							</div>
 					</ul>
@@ -122,8 +121,8 @@ footer {
 							<div class="dropdown">
 							<li><b>떡뽀끼?</b></li>
 							<div class="dropdownContents">
-							<li>떡볶이 맛집 best 10</li></a>
-							<li>떡볶이 브랜드</li>
+							<a href="1.html"><li>떡볶이 맛집 best 5</li></a>
+							<a href="2.html"><li>떡볶이란 무엇인가?</li></a>
 
 					</ul>
 					<ul>
