--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@ section {
 		float : left;
 		margin-top : 10px;
 		border : solid 1px #cccccc;
+		transition : width 2s, height 2s, transform 2s;
 }
+section:active {
+	transform : rotate(9000deg);
+}
+
 aside {
 		float : right;
 		margin-left : 30px; 
@@ -129,14 +134,15 @@ footer {
 							<div class="dropdown">
 							<li><b>떡볶이 종류</b></li>
 							<div class="dropdownContents">
-							<li>주인장이 잘 먹는</li>
-							<li>주인장이 잘 못먹는</li>
+							<a href="3.html"><li>주인장이 잘 먹는</li></a>
+							<a href="4.html"><li>주인장이 잘 못먹는</li></a>>
 					</ul>
 			</nav>
 <div class='clear'></div>		
-<section>
-				<img src='./image/1.jpg'><img src='./image/2.jpg'><img src='./image/3.jpg'>
-</section>
+<section><img src='./image/1.jpg'></section>
+<section><img src='./image/2.jpg'></section>
+<section><img src='./image/3.jpg'></section>
+
 	<aside>
 		<ul>
 					<li>이게뭔지</li>
