--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ aside {
 		border : solid 2px #00ff00;
 		padding-left : 25px;
 		padding-right : 25px;
+		transition : width 2s, height 2s, transform 2s;
 }
 aside li {
 		margin-bottom : 10px;
@@ -98,6 +99,10 @@ footer {
 #page {
 		width : 1000px;
 		margin : auto;
+}
+aside:hover
+{
+	transform : rotate(1000000000turn);
 }
 	</style>
 	<head>
