--- a/Practice.html
+++ b/Practice.html
@@ -21,6 +21,9 @@ section.skew {
 section.skewy {
 	transform : skewY(-5deg);
 }
+section.skewx {
+	transform : skewX(-30deg);
+}
 section {
 	transition : width 2s, height 2s, transform 2s;
 }
@@ -46,7 +49,7 @@ table
 <section class="skewy"><h3>여러분은 어차피 강제로 동의를 하시게 될겁니다. 왜냐구요?<br>
 제가 그렇게 만들겁니다.</h3></section>
 <span><img src="./image/17.jpg" width="500"></span><br>
-<h2>어... 쓸데없이 시간 낭비를 했군요. 그럼 이어서 말하겠습니다.</h2>
+<section class="skewx"><h2>어... 쓸데없이 시간 낭비를 했군요. 그럼 이어서 말하겠습니다.</h2></section>
 <p>떡튀순은 진짜 언제먹어도 정말 환상의 조합이라고합니다(진짜인가?). 아 저는 모릅니다. 왜냐구요? 아 몰라 ㄱ..
 </p>
 <img src="./image/18.jpg" width="500">
@@ -61,7 +64,7 @@ table
 <img src="./image/20.jpg" width="600">
 
 <h1>여러분은 지금 주인장을 어떻게 하고싶나요?</h1>
-<table border="1">
+<form><table border="1">
 <tr>
 <td rowspan="6"><label><input type="radio" name="how" value="패고싶다.">패고싶다.</label><br>
 <label><input type="radio" name="how" value="괴롭히고싶다.">괴롭히고싶다.</label><br>
@@ -74,7 +77,14 @@ table
 <tr>
 <td><input type="submit"></td>
 </tr>
+</table></form><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<form><table border="1">
+<tr>
+<td rowspan="2"><textarea rows="10" cols="60" placeholder="주인장에게 하고싶은 말을 남겨주세요.."></textarea>
+<br><input type="submit"><input type="reset"></td>
+</tr>
 </table>
+</form>
 </div>
 </body>
 </html>
