--- a/2.html
+++ b/2.html
@@ -53,6 +53,7 @@ body {
 <label><input type="radio" name="why" value="그냥 분식하면 가장먼저 떠올라서?">그냥 분식하면 가장먼저 떠올라서?</label><br>
 <label><input type="radio" name="why" value="이 홈페이지가 떡볶이 이야기를 해서?">이 홈페이지가 떡볶이 이야기를 해서?</label><br>
 <label><input type="radio" name="why" value="나는 아무생각이 없다. 왜냐하면 아무생각이 없기 때문이다.">나는 아무생각이 없다. 왜냐하면 아무생각이 없기 때문이다.</label>
+<td><input type="submit"></td>
 </td><br>
 </tr>
 </div>
