--- a/2.html
+++ b/2.html
@@ -44,7 +44,7 @@ body {
 우리들에게 떡볶이가 친숙하고 쉽게 접할수 있어 다른 분식보다도 제일 먼저 뇌 속에서 분식하면 생각나는게 떡볶이라고 나는 생각한다. 
 여러분의 생각은 어떠한가?
 </div>
-<div class="cen">
+<form>
 <table border="1">
 <tr>
 <td rowspan="6"><label><input type="radio" name="why" value="분식하면 떡볶이가 생각나서?">분식하면 떡볶이가 생각나서?</label><br>
@@ -56,6 +56,7 @@ body {
 <td><input type="submit"></td>
 </td><br>
 </tr>
+</form>
 </div>
 </body>
 </html>
