--- a/index.html
+++ b/index.html
@@ -56,17 +56,13 @@ ul
 section {
 		float : left;
 		margin-top : 10px;
-		border : solid 1px #cccccc;
-		transition : width 2s, height 2s, transform 2s;
 }
 aside {
 		float : right;
 		margin-left : 30px; 
 		margin-top : 10px;
-		border : solid 2px #00ff00;
 		padding-left : 25px;
 		padding-right : 25px;
-		transition : width 2s, height 2s, transform 2s;
 }
 aside li {
 		margin-bottom : 10px;
@@ -76,7 +72,7 @@ footer {
 		width : 1000px;
 		height : 100px;
 		margin-top : 10px;
-		border : solid 1px #cccccc;
+		border : solid 3px black;
 }
 #address {
 		float : left;
