--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ footer {
 							<li><b>떡볶이 종류</b></li>
 							<div class="dropdownContents">
 							<a href="3.html"><li>주인장이 잘 먹는</li></a>
-							<a href="4.html"><li>주인장이 잘 못먹는</li></a>>
+							<a href="4.html"><li>주인장이 잘 못먹는</li></a>
 					</ul>
 			</nav>
 <div class='clear'></div>		
